--- a/ReviewDetail.html
+++ b/ReviewDetail.html
@@ -546,6 +546,10 @@
                   <span className="menuItemIcon">📊</span>
                   榜单与数据
                 </a>
+                <a href="DataBoard.html" className="menuItem">
+                  <span className="menuItemIcon">📈</span>
+                  数据看板
+                </a>
               </div>
             </nav>
           </div>
