隐藏了榜单与数据

--- a/DashboardManagement.html
+++ b/DashboardManagement.html
@@ -308,7 +308,7 @@
                   <span className="menuItemIcon">💰</span>
                   财务对账
                 </a>
-                <a href="DashboardManagement.html" className="menuItem active">
+                <a href="DashboardManagement.html" className="menuItem active" style={{ display: 'none' }}>
                   <span className="menuItemIcon">📊</span>
                   榜单与数据
                 </a>
