--- a/DataBoard.html
+++ b/DataBoard.html
@@ -385,7 +385,7 @@
                 React.createElement('a', { href: 'ProjectManagement.html', className: 'menuItem' }, React.createElement('span', { className: 'menuItemIcon' }, '📋'), '项目管理'),
                 React.createElement('a', { href: 'StudentManagement.html', className: 'menuItem' }, React.createElement('span', { className: 'menuItemIcon' }, '👥'), '学员管理'),
                 React.createElement('a', { href: 'FinanceManagement.html', className: 'menuItem' }, React.createElement('span', { className: 'menuItemIcon' }, '💰'), '财务对账'),
-                React.createElement('a', { href: 'DashboardManagement.html', className: 'menuItem' }, React.createElement('span', { className: 'menuItemIcon' }, '📊'), '榜单与数据'),
+                React.createElement('a', { href: 'DashboardManagement.html', className: 'menuItem', style: { display: 'none' } }, React.createElement('span', { className: 'menuItemIcon' }, '📊'), '榜单与数据'),
                 React.createElement('a', { href: 'DataBoard.html', className: 'menuItem active' }, React.createElement('span', { className: 'menuItemIcon' }, '📈'), '数据看板')
               )
             )
