--- a/MyProjects.html
+++ b/MyProjects.html
@@ -445,7 +445,7 @@
                   <span className="menuItemIcon">💰</span>
                   财务对账
                 </a>
-                <a href="DashboardManagement.html" className="menuItem">
+                <a href="DashboardManagement.html" className="menuItem" style={{ display: 'none' }}>
                   <span className="menuItemIcon">📊</span>
                   榜单与数据
                 </a>
